--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
 node_modules
 .idea
 tmp
-admin/i18n/*/flat.txt
-admin/i18n/flat.txt
-admin/i18n/*/translations.json
 iob_npm.done
 package-lock.json
-/lib/socketIO.js
-/lib/socket.js
-/lib/socketWS.js
-/lib/socketCommands.js
-/lib/socketCommon.js
-/lib/ws.js
-/lib/passportSocket.js
-/www/lib/js/ws.js
 *.tgz
-www
+public
+src-admin/node_modules
+src-admin/package-lock.json
+src-admin/build
+!src-admin/public
+!src/public
+src/node_modules
+admin/custom
