--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@alcalzone/release-script-plugin-iobroker": "^3.6.0",
     "@alcalzone/release-script-plugin-license": "^3.5.9",
     "@iobroker/legacy-testing": "^1.0.0",
+    "@iobroker/testing": "^4.1.0",
+    "sinon-chai": "^3.7.0",
+    "puppeteer": "^21.3.8",
+    "colorette": "^2.0.20",
+    "chai-as-promised": "^7.1.1",
     "chai": "^4.3.10",
     "eslint": "^8.51.0",
     "gulp": "^4.0.2",
@@ -38,7 +43,8 @@
   "main": "main.js",
   "files": [
     "admin/",
-    "www/",
+    "public/",
+    "img/",
     "io-package.json",
     "LICENSE",
     "main.js"
