--- a/src-admin/package.json
+++ b/src-admin/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {},
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@iobroker/adapter-react-v5": "^4.6.6",
