--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@iobroker/webserver": "^1.0.1",
-    "@iobroker/adapter-core": "^3.0.4"
+    "@iobroker/adapter-core": "^3.0.4",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.6.0",
