--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@iobroker/webserver": "^1.0.3",
     "@iobroker/adapter-core": "^3.0.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.6.0",
@@ -30,11 +31,11 @@
     "@iobroker/legacy-testing": "^1.0.3",
     "@iobroker/testing": "^4.1.0",
     "sinon-chai": "^3.7.0",
-    "puppeteer": "^21.4.1",
+    "puppeteer": "^21.5.0",
     "colorette": "^2.0.20",
     "chai-as-promised": "^7.1.1",
     "chai": "^4.3.10",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "gulp": "^4.0.2",
     "mocha": "^10.2.0"
   },
