--- a/src-admin/package.json
+++ b/src-admin/package.json
@@ -11,10 +11,10 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@iobroker/adapter-react-v5": "^4.6.6",
-        "@mui/material": "^5.14.13",
-        "@mui/styles": "^5.14.13",
-        "@mui/icons-material": "^5.14.13",
+        "@iobroker/adapter-react-v5": "^4.7.2",
+        "@mui/material": "5.14.14",
+        "@mui/styles": "5.14.14",
+        "@mui/icons-material": "^5.14.16",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-ace": "^10.1.0",
@@ -25,9 +25,9 @@
         "@rollup/plugin-babel": "^6.0.4",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
-        "@rollup/plugin-replace": "^5.0.4",
-        "@types/react": "^18.2.28",
-        "@types/react-dom": "^18.2.13",
+        "@rollup/plugin-replace": "^5.0.5",
+        "@types/react": "^18.2.36",
+        "@types/react-dom": "^18.2.14",
         "@craco/craco": "^7.1.0",
         "craco-esbuild": "^0.5.2",
         "craco-module-federation": "^1.1.0"
