--- a/src/package.json
+++ b/src/package.json
@@ -4,18 +4,18 @@
     "private": true,
     "dependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@iobroker/adapter-react-v5": "^4.7.0",
-        "@mui/icons-material": "^5.14.13",
-        "@mui/material": "^5.14.16",
-        "@mui/styles": "^5.14.13",
-        "@sentry/browser": "^7.74.0",
-        "@sentry/integrations": "^7.74.0",
+        "@iobroker/adapter-react-v5": "^4.7.2",
+        "@mui/icons-material": "^5.14.16",
+        "@mui/material": "5.14.14",
+        "@mui/styles": "5.14.14",
+        "@sentry/browser": "^7.77.0",
+        "@sentry/integrations": "^7.77.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^8.51.0",
+        "eslint": "^8.53.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-eqeqeq-fix": "^1.0.3",
-        "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
