--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -30,10 +30,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
 
       - name: Install Dependencies
@@ -58,10 +58,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Install Dependencies
         run: npm install
@@ -95,14 +95,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Extract the version and commit body from the tag
         id: extract_release
-        # The body may be multiline, therefore, we need to escape some characters
+        # The body may be multiline; therefore, we need to escape some characters
         run: |
           VERSION="${{ github.ref }}"
           VERSION=${VERSION##*/}
@@ -161,5 +161,5 @@ jobs:
           sentry-cli releases set-commits $SENTRY_VERSION --auto
           sentry-cli releases finalize $SENTRY_VERSION
 
-        # Add the following line BEFORE finalize if sourcemap uploads are needed
+        # Add the following line BEFORE finalize if sourcemap uploads are necessary
         # sentry-cli releases files $SENTRY_VERSION upload-sourcemaps build/
