--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
     "node": ">=16"
   },
   "dependencies": {
-    "@iobroker/webserver": "^1.0.3",
-    "@iobroker/adapter-core": "^3.0.4",
-    "express": "^4.18.2",
-    "axios": "^1.6.2"
+    "@iobroker/webserver": "^1.0.6",
+    "@iobroker/adapter-core": "^3.2.1",
+    "express": "^4.21.0",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.7.0",
-    "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
+    "@alcalzone/release-script": "^3.8.0",
+    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/legacy-testing": "^1.0.3",
-    "@iobroker/testing": "^4.1.0",
+    "@iobroker/eslint-config": "^0.1.6",
+    "@iobroker/build-tools": "^1.1.0",
+    "@iobroker/legacy-testing": "^1.0.13",
+    "@iobroker/testing": "^5.0.0",
     "sinon-chai": "^3.7.0",
-    "puppeteer": "^21.5.2",
+    "puppeteer": "^23.4.1",
     "colorette": "^2.0.20",
-    "chai-as-promised": "^7.1.1",
-    "chai": "^4.3.10",
-    "eslint": "^8.54.0",
-    "gulp": "^4.0.2",
-    "mocha": "^10.2.0"
+    "chai-as-promised": "^7.1.2",
+    "chai": "^4.5.0",
+    "mocha": "^10.7.3"
   },
   "bugs": {
     "url": "https://github.com/ioBroker/ioBroker.welcome/issues"
@@ -53,8 +53,18 @@
   ],
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit",
-    "prepublishOnly": "node node_modules/gulp/bin/gulp.js",
-    "build": "node node_modules/gulp/bin/gulp.js",
+    "prepublishOnly": "node tasks",
+    "0-admin-clean": "node tasks --0-admin-clean",
+    "1-admin-npm": "node tasks --1-admin-npm",
+    "2-admin-build": "node tasks --2-admin-build",
+    "3-admin-copy": "node tasks --3-admin-copy",
+    "admin": "node tasks --admin",
+    "0-clean": "node tasks --0-clean",
+    "1-npm": "node tasks --1-npm",
+    "2-build": "node tasks --2-build",
+    "3-copy": "node tasks --3-copy",
+    "build-src": "node tasks --build-src",
+    "build": "node tasks",
     "release": "release-script",
     "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
