--- a/src-admin/package.json
+++ b/src-admin/package.json
@@ -9,28 +9,27 @@
     "dependencies": {},
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@iobroker/adapter-react-v5": "^4.7.6",
-        "@mui/material": "5.14.14",
-        "@mui/styles": "5.14.14",
-        "@mui/icons-material": "^5.14.19",
+        "@iobroker/adapter-react-v5": "^7.1.4",
+        "@iobroker/json-config": "^7.1.5",
+        "@mui/material": "6.1.1",
+        "@mui/icons-material": "^6.1.1",
         "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-ace": "^10.1.0",
-        "react-dom": "^18.2.0",
+        "react": "^18.3.1",
+        "react-ace": "^12.0.0",
+        "react-dom": "^18.3.1",
         "react-scripts": "^5.0.1",
-        "react-refresh": "^0.14.0",
-        "@originjs/vite-plugin-federation": "^1.3.3",
+        "react-refresh": "^0.14.2",
+        "@originjs/vite-plugin-federation": "^1.3.6",
         "@rollup/plugin-babel": "^6.0.4",
-        "@rollup/plugin-commonjs": "^25.0.7",
-        "@rollup/plugin-node-resolve": "^15.2.3",
-        "@rollup/plugin-replace": "^5.0.5",
-        "@types/react": "^18.2.39",
-        "@types/react-dom": "^18.2.17",
+        "@rollup/plugin-commonjs": "^28.0.0",
+        "@rollup/plugin-node-resolve": "^15.3.0",
+        "@rollup/plugin-replace": "^6.0.1",
+        "@types/react": "^18.3.10",
+        "@types/react-dom": "^18.3.0",
         "@craco/craco": "^7.1.0",
-        "craco-esbuild": "^0.5.2",
-        "craco-module-federation": "^1.1.0"
+        "craco-esbuild": "^0.6.1",
+        "craco-module-federation": "^1.1.0",
+        "react-qr-code": "^2.0.15"
     },
     "browserslist": {
         "production": [
