--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@iobroker/eslint-config": "^0.1.6",
-    "@iobroker/build-tools": "^2.0.0",
+    "@iobroker/build-tools": "^2.0.1",
     "@iobroker/legacy-testing": "^1.0.13",
     "@iobroker/testing": "^5.0.0",
     "sinon-chai": "^3.7.0",
@@ -58,12 +58,12 @@
     "1-admin-npm": "node tasks --1-admin-npm",
     "2-admin-build": "node tasks --2-admin-build",
     "3-admin-copy": "node tasks --3-admin-copy",
-    "admin": "node tasks --admin",
+    "build-admin": "node tasks --admin",
     "0-clean": "node tasks --0-clean",
     "1-npm": "node tasks --1-npm",
     "2-build": "node tasks --2-build",
     "3-copy": "node tasks --3-copy",
-    "build-src": "node tasks --build-src",
+    "build-web": "node tasks --build-src",
     "build": "node tasks",
     "release": "release-script",
     "release-patch": "release-script patch --yes",
