--- a/src/package.json
+++ b/src/package.json
@@ -4,10 +4,11 @@
     "private": true,
     "dependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@iobroker/adapter-react-v5": "^7.1.4",
-        "@mui/icons-material": "^6.1.1",
-        "@mui/material": "6.1.1",
-        "@sentry/browser": "^8.32.0",
+        "@iobroker/adapter-react-v5": "^7.2.1",
+        "@mui/icons-material": "^6.1.2",
+        "@mui/material": "^6.1.2",
+        "@mui/utils": "^6.1.2",
+        "@sentry/browser": "^8.33.0",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
