--- a/src-admin/package.json
+++ b/src-admin/package.json
@@ -9,10 +9,11 @@
     "dependencies": {},
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@iobroker/adapter-react-v5": "^7.1.4",
-        "@iobroker/json-config": "^7.1.5",
-        "@mui/material": "6.1.1",
-        "@mui/icons-material": "^6.1.1",
+        "@iobroker/adapter-react-v5": "^7.2.1",
+        "@iobroker/json-config": "^7.2.0",
+        "@mui/material": "^6.1.2",
+        "@mui/utils": "^6.1.2",
+        "@mui/icons-material": "^6.1.2",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-ace": "^12.0.0",
@@ -24,7 +25,7 @@
         "@rollup/plugin-commonjs": "^28.0.0",
         "@rollup/plugin-node-resolve": "^15.3.0",
         "@rollup/plugin-replace": "^6.0.1",
-        "@types/react": "^18.3.10",
+        "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.0",
         "@craco/craco": "^7.1.0",
         "craco-esbuild": "^0.6.1",
