--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "@iobroker/webserver": "^1.0.6",
     "@iobroker/adapter-core": "^3.2.3",
     "express": "^4.21.2",
-    "axios": "^1.7.8"
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/eslint-config": "^0.1.6",
-    "@iobroker/build-tools": "^2.0.13",
-    "@iobroker/legacy-testing": "^1.0.13",
+    "@iobroker/eslint-config": "^1.0.0",
+    "@iobroker/build-tools": "^2.0.14",
+    "@iobroker/legacy-testing": "^2.0.1",
     "@iobroker/testing": "^5.0.0",
     "sinon-chai": "^3.7.0",
-    "puppeteer": "^23.9.0",
+    "puppeteer": "^23.11.1",
     "colorette": "^2.0.20",
     "chai-as-promised": "^7.1.2",
     "chai": "^4.5.0",
-    "mocha": "^10.7.3"
+    "mocha": "^11.0.1"
   },
   "bugs": {
     "url": "https://github.com/ioBroker/ioBroker.welcome/issues"
@@ -59,6 +59,7 @@
     "2-admin-build": "node tasks --2-admin-build",
     "3-admin-copy": "node tasks --3-admin-copy",
     "build-admin": "node tasks --admin",
+    "tsc": "tsc -p tsconfig.build.json",
     "0-clean": "node tasks --0-clean",
     "1-npm": "node tasks --1-npm",
     "2-build": "node tasks --2-build",
@@ -69,7 +70,7 @@
     "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
     "release-major": "release-script major --yes",
-    "update-packages": "ncu --upgrade && cd src && ncu --upgrade && cd ../src-admin && ncu --upgrade",
+    "update-packages": "npx -y npm-check-updates --upgrade && cd src && npx -y npm-check-updates --upgrade && cd ../src-admin && npx -y npm-check-updates --upgrade",
     "npm": "npm i && cd src && npm i -f && cd ../src-admin && npm i -f"
   },
   "license": "MIT",
