--- a/src-admin/package.json
+++ b/src-admin/package.json
@@ -9,18 +9,18 @@
     "dependencies": {},
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@iobroker/adapter-react-v5": "^7.4.10",
-        "@iobroker/json-config": "^7.4.10",
-        "@mui/material": "^6.3.1",
-        "@mui/utils": "^6.3.1",
-        "@mui/icons-material": "^6.3.1",
+        "@iobroker/adapter-react-v5": "^7.4.22",
+        "@iobroker/json-config": "^7.4.22",
+        "@mui/material": "^6.4.6",
+        "@mui/utils": "^6.4.6",
+        "@mui/icons-material": "^6.4.6",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
-        "react-ace": "^13.0.0",
+        "react-ace": "^14.0.1",
         "react-dom": "^18.3.1",
         "react-scripts": "^5.0.1",
         "react-refresh": "^0.16.0",
-        "@originjs/vite-plugin-federation": "^1.3.7",
+        "@originjs/vite-plugin-federation": "^1.3.9",
         "@rollup/plugin-babel": "^6.0.4",
         "@rollup/plugin-commonjs": "^28.0.2",
         "@rollup/plugin-node-resolve": "^16.0.0",
@@ -29,8 +29,7 @@
         "@types/react-dom": "^18.3.5",
         "@craco/craco": "^7.1.0",
         "craco-esbuild": "^0.6.1",
-        "craco-module-federation": "^1.1.0",
-        "react-qr-code": "^2.0.15"
+        "craco-module-federation": "^1.1.0"
     },
     "browserslist": {
         "production": [
