--- a/src-www/package.json
+++ b/src-www/package.json
@@ -3,12 +3,13 @@
     "version": "1.0.2",
     "private": true,
     "dependencies": {
-        "@iobroker/adapter-react-v5": "^7.4.10",
-        "@mui/icons-material": "^6.3.1",
-        "@mui/material": "^6.3.1",
-        "@sentry/browser": "^8.48.0",
+        "@iobroker/adapter-react-v5": "^7.4.22",
+        "@mui/icons-material": "^6.4.6",
+        "@mui/material": "^6.4.6",
+        "@sentry/browser": "^9.2.0",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
-        "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "typescript": "^5.7.3"
