--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -135,6 +135,7 @@
                     "md": 6,
                     "lg": 6,
                     "i18n": true,
+                    "bundlerType": "module",
                     "url": "custom/customComponents.js",
                     "name": "ConfigCustomWelcomeSet/Components/WelcomeComponent",
                     "hidden": "!!data.redirect || !!data.redirectToLink"
