--- a/package.json
+++ b/package.json
@@ -1,83 +1,83 @@
 {
-  "name": "iobroker.welcome",
-  "version": "1.1.0",
-  "description": "ioBroker simple web Adapter",
-  "author": {
-    "name": "bluefox",
-    "email": "dogafox@gmail.com"
-  },
-  "homepage": "https://github.com/ioBroker/ioBroker.welcome",
-  "keywords": [
-    "ioBroker",
-    "web"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ioBroker/ioBroker.welcome"
-  },
-  "engines": {
-    "node": ">=16"
-  },
-  "dependencies": {
-    "@iobroker/webserver": "^1.1.6",
-    "@iobroker/adapter-core": "^3.2.3",
-    "express": "^4.21.2",
-    "axios": "^1.8.1"
-  },
-  "devDependencies": {
-    "@alcalzone/release-script": "^3.8.0",
-    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
-    "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/eslint-config": "^1.0.0",
-    "@iobroker/build-tools": "^2.0.15",
-    "@iobroker/legacy-testing": "^2.0.2",
-    "@iobroker/testing": "^5.0.3",
-    "sinon-chai": "^3.7.0",
-    "puppeteer": "^24.3.0",
-    "colorette": "^2.0.20",
-    "chai-as-promised": "^7.1.2",
-    "chai": "^4.5.0",
-    "mocha": "^11.1.0"
-  },
-  "bugs": {
-    "url": "https://github.com/ioBroker/ioBroker.welcome/issues"
-  },
-  "main": "main.js",
-  "files": [
-    "admin/",
-    "public/",
-    "img/",
-    "io-package.json",
-    "LICENSE",
-    "main.js"
-  ],
-  "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit",
-    "prepublishOnly": "node tasks",
-    "0-admin-clean": "node tasks --0-admin-clean",
-    "1-admin-npm": "node tasks --1-admin-npm",
-    "2-admin-build": "node tasks --2-admin-build",
-    "3-admin-copy": "node tasks --3-admin-copy",
-    "build-admin": "node tasks --admin",
-    "tsc": "tsc -p tsconfig.build.json",
-    "0-clean": "node tasks --0-clean",
-    "1-npm": "node tasks --1-npm",
-    "2-build": "node tasks --2-build",
-    "3-copy": "node tasks --3-copy",
-    "build-web": "node tasks --build-src",
-    "build": "node tasks",
-    "release": "release-script",
-    "release-patch": "release-script patch --yes",
-    "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes",
-    "update-packages": "npx -y npm-check-updates --upgrade && cd src-www && npx -y npm-check-updates --upgrade && cd ../src-admin && npx -y npm-check-updates --upgrade",
-    "npm": "npm i && cd src-www && npm i -f && cd ../src-admin && npm i -f"
-  },
-  "license": "MIT",
-  "maintainers": [
-    {
-      "name": "bluefox",
-      "email": "dogafox@gmail.com"
-    }
-  ]
+    "name": "iobroker.welcome",
+    "version": "1.1.0",
+    "description": "ioBroker simple web Adapter",
+    "author": {
+        "name": "bluefox",
+        "email": "dogafox@gmail.com"
+    },
+    "homepage": "https://github.com/ioBroker/ioBroker.welcome",
+    "keywords": [
+        "ioBroker",
+        "web"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ioBroker/ioBroker.welcome"
+    },
+    "engines": {
+        "node": ">=16"
+    },
+    "dependencies": {
+        "@iobroker/adapter-core": "^3.3.2",
+        "@iobroker/webserver": "^1.3.1",
+        "axios": "^1.13.2",
+        "express": "^5.1.0"
+    },
+    "devDependencies": {
+        "@alcalzone/release-script": "^5.0.0",
+        "@alcalzone/release-script-plugin-iobroker": "^4.0.0",
+        "@alcalzone/release-script-plugin-license": "^4.0.0",
+        "@iobroker/eslint-config": "^2.2.0",
+        "@iobroker/build-tools": "^2.0.15",
+        "@iobroker/legacy-testing": "^2.0.2",
+        "@iobroker/testing": "^5.2.2",
+        "sinon-chai": "^3.7.0",
+        "puppeteer": "^24.30.0",
+        "colorette": "^2.0.20",
+        "chai-as-promised": "^7.1.2",
+        "chai": "^4.5.0",
+        "mocha": "^11.7.5"
+    },
+    "bugs": {
+        "url": "https://github.com/ioBroker/ioBroker.welcome/issues"
+    },
+    "main": "main.js",
+    "files": [
+        "admin/",
+        "public/",
+        "img/",
+        "io-package.json",
+        "LICENSE",
+        "main.js"
+    ],
+    "scripts": {
+        "test": "node node_modules/mocha/bin/mocha --exit",
+        "prepublishOnly": "node tasks",
+        "0-admin-clean": "node tasks --0-admin-clean",
+        "1-admin-npm": "node tasks --1-admin-npm",
+        "2-admin-build": "node tasks --2-admin-build",
+        "3-admin-copy": "node tasks --3-admin-copy",
+        "build-admin": "node tasks --admin",
+        "tsc": "tsc -p tsconfig.build.json",
+        "0-clean": "node tasks --0-clean",
+        "1-npm": "node tasks --1-npm",
+        "2-build": "node tasks --2-build",
+        "3-copy": "node tasks --3-copy",
+        "build-web": "node tasks --build-src",
+        "build": "node tasks",
+        "release": "release-script",
+        "release-patch": "release-script patch --yes",
+        "release-minor": "release-script minor --yes",
+        "release-major": "release-script major --yes",
+        "update-packages": "npx -y npm-check-updates --upgrade && cd src-www && npx -y npm-check-updates --upgrade && cd ../src-admin && npx -y npm-check-updates --upgrade",
+        "npm": "npm i && cd src-www && npm i -f && cd ../src-admin && npm i -f"
+    },
+    "license": "MIT",
+    "maintainers": [
+        {
+            "name": "bluefox",
+            "email": "dogafox@gmail.com"
+        }
+    ]
 }
