--- a/src-admin/package.json
+++ b/src-admin/package.json
@@ -3,33 +3,30 @@
     "private": true,
     "version": "1.1.0",
     "scripts": {
-        "start": "set PORT=4173 && craco start",
-        "build": "craco build"
+        "start": "vite --port 4173",
+        "lint": "eslint -c eslint.config.mjs",
+        "vite-build": "tsc && vite build",
+        "build": "node tasks.cjs",
+        "preview": "vite preview"
     },
     "dependencies": {},
     "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@iobroker/adapter-react-v5": "^7.4.22",
-        "@iobroker/json-config": "^7.4.22",
-        "@mui/material": "^6.4.6",
-        "@mui/utils": "^6.4.6",
-        "@mui/icons-material": "^6.4.6",
-        "prop-types": "^15.8.1",
-        "react": "^18.3.1",
-        "react-ace": "^14.0.1",
-        "react-dom": "^18.3.1",
-        "react-scripts": "^5.0.1",
-        "react-refresh": "^0.16.0",
-        "@originjs/vite-plugin-federation": "^1.3.9",
-        "@rollup/plugin-babel": "^6.0.4",
-        "@rollup/plugin-commonjs": "^28.0.2",
-        "@rollup/plugin-node-resolve": "^16.0.0",
-        "@rollup/plugin-replace": "^6.0.2",
-        "@types/react": "^18.3.18",
+        "@iobroker/adapter-react-v5": "^8.0.13",
+        "@iobroker/json-config": "^8.0.6",
+        "@iobroker/types": "^7.0.7",
+        "@module-federation/runtime": "^0.21.4",
+        "@module-federation/vite": "^1.9.0",
+        "@mui/material": "^6.5.0",
+        "@originjs/vite-plugin-federation": "^1.4.1",
+        "@types/node": "^24.10.1",
+        "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.5",
-        "@craco/craco": "^7.1.0",
-        "craco-esbuild": "^0.6.1",
-        "craco-module-federation": "^1.1.0"
+        "@vitejs/plugin-react": "^5.1.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "vite": "7.2.2",
+        "vite-plugin-commonjs": "^0.10.4",
+        "vite-tsconfig-paths": "^5.1.4"
     },
     "browserslist": {
         "production": [
